turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:45: error: not found: value maiosn
  baisseCrayon();maison();leveCrayon();avance(75);baisseCrayon();maison();leveCrayon();avance(75);maiosn
                                                                                                  ^